css/styles.css
.whole-page {
  background-color: rgb(54, 54, 54);
}

.top-most {
  margin-top: 2%;
  margin-left: 2.5%;
}

.top-most a, i {
  text-decoration: none;
  color: #6c757d;
}

.top-most i {
  font-size: 1em;
}

.logo-top {
  background-color: rgb(255, 255, 255);
}

.nortsea-black {
  background-color: rgb(54, 54, 54);
}

.log-in-box, .dropdown-toggle {
  border-radius: 0px;
}

.language-box {
  padding-left: 2em;
  padding-right: 2em;
}

.social-link-bar {
  border: 1px solid #6c757d;
  padding: .30rem 0 .30rem 0;
  font-size: 1.25em;
}

.social-link-bar a {
  color: #6c757d;
  background-color: transparent;
  background-image: none;
}

.icon-search {
  color: #919191;
  font-size: 20px;
}

/* .flex-auto {
  flex-grow: 1;
} */

.travel-bar {
  margin: 5%;
}

.page-top, .page-bottom {
  background-color: rgb(49, 49, 49);
}

.content-background-one {
  background-image: url("../img/background-pattern.svg");
}

.page-bottom {
 color: #acacac;
}

body > div > footer > div > div.col-md-4.contact.flex-auto.container > div > div.col-md-6.contact-column-one {
  margin-right: -15%;
}

.sub-footer {
  background-color: #3f3f3f;
  color: #6c757d;
}

.copyright {
  float: left;
}

.designer {
  float: right;
}

.row.page-bottom {
  background-color: rgb(49, 49, 49);
}

